[package]
name = "penguin-app"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[[bin]]
name = "penguin"
path = "src/main.rs"


[dependencies]
anyhow = "1"
bunt = "0.2.4"
log = "0.4"
penguin = { path = "../lib" }
pretty_env_logger = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros"]}
