[package]
name = "penguin-app"
version = "0.2.5"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Dev server with auto-reload, static file server, proxy support, and more.
Language and framework agnostic. This is the CLI app, but Penguin exists
as a library, too.
"""
repository = "https://github.com/LukasKalbertodt/penguin/"
readme = "../README.md"
license = "MIT/Apache-2.0"

keywords = ["development", "autoreload", "devserver"]
categories = ["development-tools", "command-line-utilities", "web-programming::http-server"]


[[bin]]
name = "penguin"
path = "src/main.rs"


[dependencies]
anyhow = "1"
bunt = "0.2.4"
log = "0.4"
notify = "4"
open = "2"
penguin = { version = "0.1.7", path = "../lib" }
pretty_env_logger = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros"]}

[features]
vendored-openssl = ["penguin/vendored-openssl"]
