[package]
name = "penguin"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"


[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
hyper-tls = "0.5"
hyper-tungstenite = "0.2"
mime_guess = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros"] }
tokio-util = { version = "0.6.3", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"]}
