[package]
name = "penguin"
version = "0.1.3"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Dev server with auto-reload, static file server, proxy support, and more.
Language and framework agnostic. This is the library crate, but Penguin exists
as a CLI app, too.
"""
documentation = "https://docs.rs/penguin/"
repository = "https://github.com/LukasKalbertodt/penguin/"
readme = "../README.md"
license = "MIT/Apache-2.0"

keywords = ["development", "autoreload", "devserver"]
categories = ["development-tools", "web-programming::http-server"]
exclude = ["Cargo.lock"]


[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
hyper-tls = "0.5"
hyper-tungstenite = "0.3"
log = "0.4"
mime_guess = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros"] }
tokio-util = { version = "0.6.3", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"]}
